# Educhain-AI

./: README.md  ai_chatbot.py  ai_jobs.py  ai_resume.py  ai_skills.py  app.py  blockchain.py  download  download (1)  nft_generator.py  pyproject.toml  qr_generator.py  replit.md  student.html  verify.html  wallet.py
